--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_fonts: ^6.2.1
   string_validator: ^1.0.2
   video_player: ^2.8.6
+  animate_gradient: ^0.0.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,8 @@ flutter:
   assets:
     - assets/
     - assets/videos/
+    - assets/images/
+    - assets/images/test/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
