--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   video_player: ^2.8.6
   animate_gradient: ^0.0.3
   carousel_slider: ^4.2.1
+  intl: ^0.19.0
+  url_launcher: ^6.3.0
+  razorpay_flutter: ^1.3.7
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
