--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   razorpay_flutter: ^1.3.7
   geocoding: ^3.0.0
   geolocator: ^12.0.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,8 @@ flutter:
     - assets/videos/
     - assets/images/
     - assets/images/test/
+    - assets/gifs/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
