--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   lottie: ^3.1.2
   http: ^1.2.2
   cached_network_image: ^3.4.0
+  svg_flutter: ^0.0.1
 
 dev_dependencies:
   flutter_test:
