--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   http: ^1.2.2
   cached_network_image: ^3.4.0
   svg_flutter: ^0.0.1
+  package_info_plus: ^8.0.2
+  image_picker: ^1.1.2
+  firebase_storage: ^11.7.7
 
 dev_dependencies:
   flutter_test:
