--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   package_info_plus: ^8.0.2
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
+  image_cropper: ^8.0.1
 
 dev_dependencies:
   flutter_test:
