--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
   image_cropper: ^8.0.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
