fixed redirection bug from auth to select location view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_storage: ^11.7.7
   image_cropper: ^8.0.1
   animated_text_kit: ^4.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
