--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  font_awesome_flutter: ^10.8.0
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
