--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   cloud_firestore: ^4.16.1
   freezed_annotation: ^2.4.1
   json_serializable: ^6.7.1
-  auto_route: ^8.0.3
+  auto_route: 8.0.3
   firebase_auth: ^4.19.1
   shared_preferences: ^2.2.3
   google_fonts: ^6.2.1
@@ -37,7 +37,7 @@ dependencies:
   package_info_plus: ^8.0.2
   image_picker: ^1.1.2
   firebase_storage: ^11.7.7
-  image_cropper: ^8.0.2
+  image_cropper: ^8.0.1
   animated_text_kit: ^4.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
