--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.3+4
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -44,6 +44,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   location: ^6.0.2
   qr_flutter: ^4.1.0
+  firebase_messaging: ^14.9.4
 
 dev_dependencies:
   flutter_test:
