fixed back issue on tabs

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
         android:usesCleartextTraffic="true"
         android:label="Fusshn"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -35,7 +36,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        android:enableOnBackInvokedCallback="true"
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
