--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.5+6
+version: 1.0.6+7
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -67,3 +67,4 @@ flutter:
     - assets/gifs/
     - assets/lottie/
     - assets/indian_cities/
+    - assets/splash/
