--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.6+7
+version: 1.0.7+8
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -46,6 +46,7 @@ dependencies:
   qr_flutter: ^4.1.0
   firebase_messaging: ^14.9.4
   flutter_native_splash: ^2.4.0
+  expansion_tile_card: ^3.0.0
 
 dev_dependencies:
   flutter_test:
