--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.8+9
+version: 1.0.9+10
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -47,6 +47,7 @@ dependencies:
   firebase_messaging: ^14.9.4
   flutter_native_splash: ^2.4.0
   expansion_tile_card: ^3.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
