--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.11+12
+version: 1.0.12+13
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -48,6 +48,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   expansion_tile_card: ^3.0.0
   shimmer: ^3.0.0
+  supabase_flutter: ^2.8.4
+  firebase_database: ^10.5.7
 
 dev_dependencies:
   flutter_test:
